--- a/coment.html
+++ b/coment.html
@@ -60,13 +60,13 @@
   const lielement = document.querySelector('.comment')
   const buttonEL = document.querySelector('.add-comment-button')
   const ulElement = document.querySelector('.comments')
-  const nameStyle = document.querySelector('.add-coment-name')
-  const textStyle = document.querySelector('.add-coment-text')
+  const nameStyle = document.querySelector('.add-comment-name')
+  const textStyle = document.querySelector('.add-comment-text')
 
 
   buttonEL.addEventListener('click', function() {
     const name = document.querySelector(".add-comment-name").value;
-    const text = document.querySelector('add-comment-text').value;
+    const text = document.querySelector('.add-comment-text').value;
 
     if (name === '' || name === ' ') {
       nameStyle.style.border = '4px solid';
@@ -93,14 +93,14 @@
         year:'2-digit',
         month: '2-digit',
         day: '2-digit'
-      }) + ' ' + dateTime.toLocaleDateString('ru_RU', {
+      }) + ' ' + dateTime.toLocaleDateString('ru-RU', {
       hour: '2-digit',
       minute: '2-digit'})
 
       const oldHtml = ulElement.innerHTML;
       ulElement.innerHTML = oldHtml + `
       <li class="comment">
-        <div class="comment-header"
+        <div class="comment-header">
           <div>${name}</div>
          <div>${dateTime}</div>
        </div>
@@ -121,3 +121,5 @@
 </body>
 
 </html>
+
+
