--- a/coment.html
+++ b/coment.html
@@ -56,67 +56,83 @@
         </div>
        </div>
 </div>
-<script>
-  const lielement = document.querySelector('.comment')
-  const buttonEL = document.querySelector('.add-comment-button')
-  const ulElement = document.querySelector('.comments')
-  const nameStyle = document.querySelector('.add-comment-name')
-  const textStyle = document.querySelector('.add-comment-text')
+<script> 
+  const buttonEL = document.querySelector('.add-comment-button'); 
+  const ulElement = document.querySelector('.comments'); 
+  const nameStyle = document.querySelector('.add-comment-name'); 
+  const textStyle = document.querySelector('.add-comment-text'); 
 
+  buttonEL.addEventListener('click', function() { 
+    const name = nameStyle.value; 
+    const text = textStyle.value; 
 
-  buttonEL.addEventListener('click', function() {
-    const name = document.querySelector(".add-comment-name").value;
-    const text = document.querySelector('.add-comment-text').value;
+    if (name.trim() === '') { 
+      nameStyle.style.border = '4px solid red'; 
+      nameStyle.placeholder = "Введите ваше имя!"; 
+      return; 
+    } else if (text.trim() === '') { 
+      textStyle.style.border = '4px solid red'; 
+      textStyle.placeholder = "Введите комментарий!"; 
+      return; 
+    } else { 
+      nameStyle.style.border = ''; 
+      textStyle.style.border = ''; 
+      nameStyle.value = ''; 
+      textStyle.value = ''; 
+      nameStyle.placeholder = "Введите ваше имя"; 
+      textStyle.placeholder = "Введите ваш комментарий"; 
+    } 
 
-    if (name === '' || name === ' ') {
-      nameStyle.style.border = '4px solid';
-      nameStyle.style.borderColor = 'red';
-      nameStyle.placeholder = "Введите комментарий!"
-      return;
-    } else if (text === '' || text === ' ') {
-      textStyle.style.border = '4px solid';
-      textStyle.style.borderColor = 'red';
-      textStyle.placeholder = "Введите комментарий!"
-      return;
-    } else {
-      nameStyle.style.border = '';
-      nameStyle.style.borderColor = '';
-      document.querySelector('.add-comment-name').value = '';
-      nameStyle.placeholder = "Введите ваше имя"
-      textStyle.placeholder = "Введите ваш комментарий"
-      textStyle.style.border = '';
-      textStyle.style.borderColor = '';
-      document.querySelector('.add-comment-text').value = '';
-    };
-      let dateTime = new Date();
-      dateTime = dateTime.toLocaleDateString('ru-RU', {
-        year:'2-digit',
-        month: '2-digit',
-        day: '2-digit'
-      }) + ' ' + dateTime.toLocaleDateString('ru-RU', {
-      hour: '2-digit',
-      minute: '2-digit'})
+    let dateTime = new Date(); 
+    dateTime = dateTime.toLocaleDateString('ru-RU', { 
+      year: '2-digit', 
+      month: '2-digit', 
+      day: '2-digit' 
+    }) + ' ' + dateTime.toLocaleTimeString('ru-RU', { 
+      hour: '2-digit', 
+      minute: '2-digit' 
+    });
 
-      const oldHtml = ulElement.innerHTML;
-      ulElement.innerHTML = oldHtml + `
-      <li class="comment">
-        <div class="comment-header">
-          <div>${name}</div>
-         <div>${dateTime}</div>
-       </div>
-       <div class="comment-body">
-         <div class="comment-text">
-            ${text}
-         </div>
-       </div>
-       <div class="comment-footer">
-          <div class="likes">
-            <span class="likes-counter">0</span>
-           <button class="like-button"></button>
-          </div>
-       </div>
-      </li>`;
-  });
+    const commentHTML = ` 
+      <li class="comment"> 
+        <div class="comment-header"> 
+          <div>${name}</div> 
+          <div>${dateTime}</div> 
+        </div> 
+        <div class="comment-body"> 
+          <div class="comment-text"> 
+            ${text} 
+          </div> 
+        </div> 
+        <div class="comment-footer"> 
+          <div class="likes"> 
+            <span class="likes-counter">0</span> 
+            <button class="like-button"></button> 
+          </div> 
+        </div> 
+      </li>`; 
+
+    ulElement.innerHTML += commentHTML; 
+
+    // Получаем элемент, который был только что добавлен, и его кнопку лайка
+    const newComment = ulElement.lastElementChild;
+    const newLikeButton = newComment.querySelector('.like-button');
+    const likesCounter = newComment.querySelector('.likes-counter');
+    let likeCount = 0; // начальное количество лайков
+
+    // Обработчик для кнопки лайка
+    newLikeButton.addEventListener('click', function() {
+      if (newLikeButton.classList.contains('-active-like')) {
+        likeCount--;
+        likesCounter.textContent = likeCount;
+        newLikeButton.classList.remove('-active-like');
+      } else {
+        likeCount++;
+        likesCounter.textContent = likeCount;
+        newLikeButton.classList.add('-active-like');
+      }
+    });
+  }); 
 </script>
 </body>
 
