--- a/coment.html
+++ b/coment.html
@@ -13,10 +13,7 @@
 </head>
 
 <body>
-  <div id="commentsContainer">
-    
-  </div> <!-- Контейнер для комментариев -->
-<div class="container">
+<div class="container ">
   <ul class="comments">
     <li class="comment">
       <div class="comment-header">
@@ -29,11 +26,11 @@
       <div class="comment-footer">
         <div class="likes">
         <span class="likes-counter">10</span>
-          <button class="like-button"></button>
+        <button class="like-button" style="color: black;">🤍</button>
         </div>
       </div>
     </li>
-    <li class="comment">
+    <li class="comment">  
       <div class="comment-header">
         <div>Алексей А.</div>
         <div>16.01.25 19:58</div>
@@ -46,21 +43,20 @@
       <div class="comment-footer">
         <div class="likes">
           <span class="likes-counter">105</span>
-          <button class="like-button -active-like"></button>
+          <button class="like-button" style="color: black;">🤍</button>
         </div>
       </div>
     </li>
   </ul>
+  <div id="commentsContainer"></div>
   <div class="add-comment" id="commentForm">
     <input type="text" class="add-comment-name" id="nameInput" placeholder="Введите ваше имя">
     <textarea type="text" class="add-comment-text" id="textInput"placeholder="Введите ваш комментарий" rows="4"></textarea>
         <div class="add-comment-butt">
             <button class="add-comment-button" id="submitComment">Отправить</button>
+          </div>
         </div>
-      </div>
-      <div id="commentsContainer"></div>
-</div>
+    </div>
   <script type="module" src="src/index.js" defer></script>
-    
 </body>
 </html>
